--- a/style.css
+++ b/style.css
@@ -4,7 +4,70 @@
   box-sizing: border-box;
 }
 
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   background-color: #444;
-  display: grid;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  flex-wrap: wrap;
+  background-image: url("asset\encryption.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+h1 {
+  padding: 20px 0;
+  margin-bottom: 40px;
+  color: gray;
+  font-size: 40px;
+  text-align: center;
+  letter-spacing: 2px;
+}
+.form-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  flex-grow: 1;
+  width: 100%;
+}
+
+.input {
+  text-align: center;
+  color: gray;
+  padding: 8px 0;
+  font-size: 24px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 3px solid green;
+  outline: none;
+  transition: all 0.2s ease-in;
+}
+
+.input:focus {
+  letter-spacing: 1px;
+}
+
+.btn {
+  font-size: 18px;
+  margin: 30px 0;
+  background-color: green;
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 10px 30px;
+  text-transform: uppercase;
+  transition: background-color 0.2s ease-in-out;
+  cursor: pointer;
+  letter-spacing: 3px;
+  font-weight: bold;
+}
+
+.btn:hover {
+  background-color: #005f00;
 }
