--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   flex-direction: column;
   height: 100vh;
   flex-wrap: wrap;
-  background-image: url("/asset/encryption.jpg");
+  background-image: url("https://dominiklorenc.github.io/Caesar/asset/encryption.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
